--- a/01_intro_html/forms.html
+++ b/01_intro_html/forms.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario</title>
 </head>
+<!--Ejemplo-->
 <body>
     <main>
         <h1>Funcionamiento del Form</h1>
