Pagina web con flexbox y grid

--- a/05_Grid_css/5_1_grid_pag/index.html
+++ b/05_Grid_css/5_1_grid_pag/index.html
@@ -10,13 +10,13 @@
 <body>
     <header>
         <div>
-            <img src="" alt="">
+            <img src="img/logo.jpg" alt="logo">
             <h1>Pagina Grid + Flex</h1>
         </div>
         <nav>
-            <a href="#"></a>
+            <a href="#">Link</a>
             <span>Saul Padilla</span>
-            <img src="" alt="">
+            <img src="img/usuario.png" alt="usuario">
         </nav>
     </header>
     <main>
@@ -29,47 +29,47 @@
         </aside>
         <section>
             <article>
-                <img src="" alt="">
+                <img src="img/download.png" alt="">
                 <h3>Titulo</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, excepturi!</p>
             </article>
             <article>
-                <img src="" alt="">
+                <img src="img/download.png" alt="">
                 <h3>Titulo</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, excepturi!</p>
             </article>
             <article>
-                <img src="" alt="">
+                <img src="img/download.png" alt="">
                 <h3>Titulo</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, excepturi!</p>
             </article>
             <article>
-                <img src="" alt="">
+                <img src="img/download.png" alt="">
                 <h3>Titulo</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, excepturi!</p>
             </article>
             <article>
-                <img src="" alt="">
+                <img src="img/download.png" alt="">
                 <h3>Titulo</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, excepturi!</p>
             </article>
             <article>
-                <img src="" alt="">
+                <img src="img/download.png" alt="">
                 <h3>Titulo</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, excepturi!</p>
             </article>
             <article>
-                <img src="" alt="">
+                <img src="img/download.png" alt="">
                 <h3>Titulo</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, excepturi!</p>
             </article>
             <article>
-                <img src="" alt="">
+                <img src="img/download.png" alt="">
                 <h3>Titulo</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, excepturi!</p>
             </article>
             <article>
-                <img src="" alt="">
+                <img src="img/download.png" alt="">
                 <h3>Titulo</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, excepturi!</p>
             </article>
