Pagina web con Flexbox y Grid

--- a/05_Grid_css/5_1_grid_pag/index.html
+++ b/05_Grid_css/5_1_grid_pag/index.html
@@ -14,7 +14,7 @@
             <h1>Pagina Grid + Flex</h1>
         </div>
         <nav>
-            <a href="#">Link</a>
+            <a href="#"><img src="img/ajustes.png" alt="ajustes"></a>
             <span>Saul Padilla</span>
             <img src="img/usuario.png" alt="usuario">
         </nav>
