Layout de pagina web

--- a/05_Grid_css/5_2_Ejercicios/Ejercicio 2/index.html
+++ b/05_Grid_css/5_2_Ejercicios/Ejercicio 2/index.html
@@ -19,7 +19,7 @@
 
     <main>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur iure corrupti eaque architecto? Veritatis maiores quae consequatur maxime, unde ex aliquam deserunt eius tempore praesentium officia dolorum facere. A, excepturi!</p>
-        <img src="img/amogus.gif" alt="AMOGUS"> 
+        <img src="img/persona.png" alt="Persona"> 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit corrupti illo deserunt laudantium nostrum vel. Laboriosam, consequuntur! Aut architecto error tempore assumenda ex nostrum rerum quae placeat suscipit. Perferendis, debitis!
         Quidem natus corrupti non repellendus fuga dolorem autem quo, quibusdam sed numquam consectetur eius hic consequuntur asperiores doloribus enim obcaecati expedita neque atque aperiam laborum quas dolorum necessitatibus incidunt. Ipsa.
         Quidem maiores ipsum eligendi harum itaque in iure, quibusdam saepe porro magni ex obcaecati, odio vel earum facere, et culpa dolor illo perferendis praesentium nam odit laborum iusto. Ad, accusantium!
@@ -45,10 +45,10 @@
 
 
     <footer>
-        <p><i class="material-icons md-36">home</i><br> Home</p> 
-        <p><i class="material-icons md-36">notifications</i><br>Notification</p> 
-        <p><i class="material-icons md-36">mail</i><br>Messages</p> 
-        <p><i class="material-icons md-36">person</i><br>Me</p> 
+        <a href="#"><p><i class="material-icons md-36">home</i><br> Home</p> </a>
+       <a href="#"><p><i class="material-icons md-36">notifications</i><br>Notification</p> </a>
+        <a href="#"><p><i class="material-icons md-36">mail</i><br>Messages</p> </a>
+        <a href="#"><p><i class="material-icons md-36">person</i><br>Me</p> </a>
     </footer>
 </body>
 
